# sixth

./: Cargo.toml  README.md  deploy_icrc1.sh  dfx.json  example.env  set_env.sh
src/sixth_backend/: Cargo.toml  sixth_backend.did
src/sixth_backend/src/: lib.rs
